c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_parse/extra_credit/static_label.c
// The static specifier cannot be applied to labels

int main(void) {
    static a:
    return 1;
}